change in syntax

--- a/demo/test.html
+++ b/demo/test.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p-d on=input to=if-diff:lhs m=1></p-d>
-    <a [m]></a>
-    <a .n></a>
+    <a manUp:></a>
+    
 </body>
 </html>
