--- a/demo/dev.html
+++ b/demo/dev.html
@@ -16,19 +16,22 @@
     <h3>Basic xtal-json-merge demo</h3>
 
     <!-- <div> -->
-    <div>Input:</div>
-    <xtal-json-merge input="[]" data-imp>
-      <script type="application/json">
-                  [
-                    [
-                        {"name": "Harry Potter", "age":"13"},
-                        {"name": "Albus Dumbledore", "age":"279"}
-                    ]
-                  ]
-                    </script>
-    </xtal-json-merge>
-    <p-d on="merged-prop-changed" to="#firstEditor" prop="input" val="target.mergedProp"></p-d>
-    <p-d on="merged-prop-changed" to="#insertData" prop="input" val="target.mergedProp"></p-d>
+    <div>
+        <div>Input:</div>
+        <xtal-json-merge input="[]" data-imp>
+          <script type="application/json">
+                      [
+                        [
+                            {"name": "Harry Potter", "age":"13"},
+                            {"name": "Albus Dumbledore", "age":"279"}
+                        ]
+                      ]
+                        </script>
+        </xtal-json-merge>
+        <p-d on="merged-prop-changed" from="div" to="#firstEditor" prop="input" val="target.mergedProp"></p-d>
+        <p-d on="merged-prop-changed" from="div" to="#insertData" prop="input" val="target.mergedProp"></p-d>
+    </div>
+
 
     <xtal-json-editor id="firstEditor" options="{}" data-imp></xtal-json-editor>
     <br>
@@ -77,13 +80,13 @@
     <div>Output:</div>
     <xtal-json-editor id="secondEditor" options="{}"></xtal-json-editor>
     <!-- Use experimental import maps -->
-    <script defer src="https://cdn.jsdelivr.net/npm/es-module-shims@0.2.4/dist/es-module-shims.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/es-module-shims@0.2.7/dist/es-module-shims.js"></script>
     <script type="importmap-shim">
     {
       "imports": {
         "xtal-element/": "../node_modules/xtal-element/",
         "trans-render/": "../node_modules/trans-render/",
-        "xtal-sip": "https://cdn.jsdelivr.net/npm/xtal-sip@0.0.80/xtal-sip.js",
+        "xtal-sip": "https://cdn.jsdelivr.net/npm/xtal-sip@0.0.90/xtal-sip.js",
         "xtal-json-merge": "https://cdn.jsdelivr.net/npm/xtal-json-merge@0.2.37/xtal-json-merge.js",
         "xtal-json-editor": "https://cdn.jsdelivr.net/npm/xtal-json-editor@0.0.35/xtal-json-editor.js",
         "p-d": "../p-d.js"
