--- a/demo/dev.html
+++ b/demo/dev.html
@@ -80,7 +80,7 @@
     <div>Output:</div>
     <xtal-json-editor id="secondEditor" options="{}"></xtal-json-editor>
     <!-- Use experimental import maps -->
-    <script defer src="https://cdn.jsdelivr.net/npm/es-module-shims@0.2.7/dist/es-module-shims.js"></script>
+    <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
     <script type="importmap-shim">
     {
       "imports": {
