--- a/demo/singleTest.html
+++ b/demo/singleTest.html
@@ -9,10 +9,27 @@
 <body>
     <div>
         <div data-x="iah">test</div>
-        <p-d on="click" prop="innerText" val="target.dataset.x" skip-init></p-d>
+        <p-d on="click" to="details" care-of="summary" prop="innerText" val="target.dataset.x" skip-init></p-d>
         <div>a</div>
         <div>b</div>
-        <script type="module" src="../p-d.js"></script>
+        <details>
+            <summary></summary>
+            Details content
+        </details>
+            <!-- Use experimental import maps -->
+    <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
+    <script type="importmap-shim">
+    {
+      "imports": {
+        "xtal-element/": "../node_modules/xtal-element/",
+        "trans-render/": "../node_modules/trans-render/"
+      }
+    }
+    </script>
+    <!-- <script type="module" src="../p-d.js"></script> -->
+    <script  type="module-shim">
+        import '../p-d.js';
+    </script>
     </div>
 </body>
 </html>
