--- a/demo/singleTest.html
+++ b/demo/singleTest.html
@@ -9,11 +9,11 @@
 <body>
     <div>
         <div data-x="iah">test</div>
-        <p-d on="click" to="details" care-of="summary" prop="innerText" val="target.dataset.x" skip-init></p-d>
+        <p-d on="click" to="details" care-of="summary[-inner-text]" val="target.dataset.x" skip-init></p-d>
         <div>a</div>
         <div>b</div>
         <details>
-            <summary></summary>
+            <summary -inner-text></summary>
             Details content
         </details>
             <!-- Use experimental import maps -->
