--- a/demo/pd-state-test.html
+++ b/demo/pd-state-test.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div>
-        <p-state-down to=[-text-content] val=target.history.state.val m=1></p-state-down>
+        <!-- <p-out-of-state to=[-text-content] val=target.history.state.val m=1></p-out-of-state>
+        <div -text-content></div> -->
+
+        <button data-val="hello">Hello</button>
+        <p-into-state on="click" to=[-text-content] val=target.dataset.val skip-init with-state-path="e.f.g" m=1></p-into-state>
         <div -text-content></div>
         <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
         <script type="importmap-shim">
@@ -23,7 +27,8 @@
         </script>
         <!-- <script type="module" src="../p-d.js"></script> -->
         <script  type="module-shim">
-            import '../p-state-down.js';
+            import '../p-out-of-state.js';
+            import '../p-into-state.js';
         </script>
     </div>
 
