--- a/demo/pd-state-test.html
+++ b/demo/pd-state-test.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div>
-        <!-- <p-out-of-state to=[-text-content] val=target.history.state.val m=1></p-out-of-state>
-        <div -text-content></div> -->
+        <p-out-of-state to=[-text-content] val=target.history.state.val m=1></p-out-of-state>
+        <div -text-content></div>
 
         <button data-val="hello">Hello</button>
-        <p-into-state on="click" to=[-text-content] val=target.dataset.val skip-init with-state-path="e.f.g" m=1></p-into-state>
+        <p-into-state src="../p-into-state.ts" on="click" to=[-text-content] val=target.dataset.val skip-init with-state-path="e.f.g" m=1></p-into-state>
         <div -text-content></div>
         <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
         <script type="importmap-shim">
