--- a/demo/pd-state-test.html
+++ b/demo/pd-state-test.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div>
-        <p-out-of-state to=[-text-content] val=target.history.state.val m=1></p-out-of-state>
+        <p-d-state to=[-text-content] from-path=val m=1></p-d-state>
         <div -text-content></div>
 
         <button data-val="hello">Hello</button>
-        <p-into-state on="click" to=[-text-content] val=target.dataset.val skip-init with-state-path="e.f.g" m=1></p-into-state>
+        <p-d-and-cc-state on="click" to=[-text-content] val=target.dataset.val skip-init with-state-path="e.f.g" m=1></p-d-and-cc-state>
         <div -text-content></div>
         <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
         <script type="importmap-shim">
@@ -27,8 +27,8 @@
         </script>
         <!-- <script type="module" src="../p-d.js"></script> -->
         <script  type="module-shim">
-            import '../p-out-of-state.js';
-            import '../p-into-state.js';
+            import '../p-d-state.js';
+            import '../p-d-and-cc-state.js';
         </script>
     </div>
 
