--- a/demo/pd-state-test.html
+++ b/demo/pd-state-test.html
@@ -12,7 +12,7 @@
         <div -text-content></div>
 
         <button data-val="hello">Hello</button>
-        <p-d-f on="click" to=[-text-content] val=target.dataset.val skip-init with-state-path="e.f.g" m=1></p-d-f>
+        <p-w on="click" to=[-text-content] val=target.dataset.val skip-init and merge into history.state with-state-path="e.f.g" m=1></p-w>
         <div -text-content></div>
         <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
         <script type="importmap-shim">
@@ -28,7 +28,7 @@
         <!-- <script type="module" src="../p-d.js"></script> -->
         <script  type="module-shim">
             import '../p-h-d.js';
-            import '../p-d-f.js';
+            import '../p-w.js';
         </script>
     </div>
 
