--- a/demo/pd-state-test.html
+++ b/demo/pd-state-test.html
@@ -12,7 +12,7 @@
         <div -text-content></div>
 
         <button data-val="hello">Hello</button>
-        <p-w on="click" to=[-text-content] val=target.dataset.val skip-init and merge into history.state with-state-path="e.f.g" m=1></p-w>
+        <p-w on="click" to=[-text-content] val=target.dataset.val skip-init cc state-path="e.f.g" m=1></p-w>
         <div -text-content></div>
         <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
         <script type="importmap-shim">
