--- a/demo/syntax.html
+++ b/demo/syntax.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div>
+        Auto-generated via [wca analyzer](https://github.com/runem/web-component-analyzer)
         <wc-info package-name="npm install p-et-alia" href="https://unpkg.com/p-et-alia@0.0.45/custom-elements.json"></wc-info>
         <script type="module" src="https://unpkg.com/wc-info@0.0.65/wc-info.js?module"></script>
     </div>
