--- a/demo/dev.html
+++ b/demo/dev.html
@@ -86,17 +86,16 @@
       "imports": {
         "xtal-element/": "../node_modules/xtal-element/",
         "trans-render/": "../node_modules/trans-render/",
-        "xtal-sip": "https://cdn.jsdelivr.net/npm/xtal-sip@0.0.90/xtal-sip.js",
-        "xtal-json-merge": "https://cdn.jsdelivr.net/npm/xtal-json-merge@0.2.37/xtal-json-merge.js",
-        "xtal-json-editor": "https://cdn.jsdelivr.net/npm/xtal-json-editor@0.0.35/xtal-json-editor.js",
         "p-d": "../p-d.js"
       }
     }
     </script>
     <!-- <script type="module" src="../p-d.js"></script> -->
     <script  type="module-shim">
-        import 'xtal-sip';
+        import '../p-d.js';
     </script>
+    <script type="module" src="https://unpkg.com/xtal-json-merge@0.2.37/xtal-json-merge.js?module"></script>
+    <script type="module" src="https://unpkg.com/xtal-json-editor@0.0.39/xtal-json-editor.js?module"></script>
   </div>
 </body>
 
