--- a/demo/cdn.html
+++ b/demo/cdn.html
@@ -7,90 +7,80 @@
 
   <title>xtal-json-merge demo</title>
 
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script async src="https://unpkg.com/xtal-json-editor@0.0.19/xtal-json-editor.js"></script>
-  <script async src="https://unpkg.com/xtal-json-merge@0.2.23/json-merge.js"></script>
-  <script async type="module" src="https://unpkg.com/p-d.p-u@0.0.10/p-d.p-u.js?module"></script>
 
-  <script>
-      console.log(navigator.userAgent);
-    </script>
-
-  <custom-style>
-    <style is="custom-style" include="demo-pages-shared-styles">
-    </style>
-  </custom-style>
 </head>
 
 <body>
   <div class="vertical-section-container centered">
     <h3>Basic xtal-json-merge demo</h3>
-            <!-- <div> -->
-              <div>Input:</div>
-              <xtal-insert-json input="[]">
-              <script type="application/json">
-                [
-                  [
-                      {"name": "Harry Potter", "age":"13"},
-                      {"name": "Albus Dumbledore", "age":"279"}
-                  ]
-                ]
-                  </script>
-              </xtal-insert-json>
-              <p-d to="#firstEditor{input};#insertData{input}" on="merged-prop-changed"></p-d>
-              <script type="module ish">
-                (
-                  {testFn: n => n+1}
-                )
-              </script>
-              <p-d to="{testFunction:testFn}" on="eval"></p-d>
-              <xtal-json-editor id="firstEditor" options="{}"></xtal-json-editor>
-              <br>
-              <div>Merge with</div>
-              <pre>
-                  [{
-                  "columns":[
-                      {"id": "index",       "name": "Index",      "field": "index"},
-                      {"id": "isActive",    "name": "Active",     "field": "isActive"},
-                      {"id": "balance",     "name": "Balance",    "field": "balance"},
-                      {"id": "age",         "name": "Age",        "field": "age"},
-                      {"id": "eyeColor",    "name": "Eye Color",  "field": "eyeColor"},
-                      {"id": "name",        "name": "Name",       "field": "name"},
-                      {"id": "gender",      "name": "Gender",     "field": "gender"},
-                      {"id": "company",     "name":"Company",     "field": "company"}
-                  ],
-                  "gridOptions":{
-                      "enableCellNavigation": true,
-                      "enableColumnReorder": false
-                  }
-                  }]              
-              </pre>
-              <br>
-              <xtal-insert-json disabled id="insertData" with-path="data" hidden>
-              <script type="application/json">
-                  [{
-                  "columns":[
-                      {"id": "index",       "name": "Index",      "field": "index"},
-                      {"id": "isActive",    "name": "Active",     "field": "isActive"},
-                      {"id": "balance",     "name": "Balance",    "field": "balance"},
-                      {"id": "age",         "name": "Age",        "field": "age"},
-                      {"id": "eyeColor",    "name": "Eye Color",  "field": "eyeColor"},
-                      {"id": "name",        "name": "Name",       "field": "name"},
-                      {"id": "gender",      "name": "Gender",     "field": "gender"},
-                      {"id": "company",     "name":"Company",     "field": "company"}
-                  ],
-                  "gridOptions":{
-                      "enableCellNavigation": true,
-                      "enableColumnReorder": false
-                  }
-                  }]
-              </script>
-              </xtal-insert-json>
-              <p-d to="xtal-json-editor{input:detail.value}" on="merged-prop-changed"></p-d>
-              <br>
-              <div>Output:</div>
-              <xtal-json-editor options="{}"></xtal-json-editor>
-            <!-- </div> -->
+
+    <!-- <div> -->
+    <div>
+        <div>Input:</div>
+        <xtal-json-merge input="[]" data-imp>
+          <script type="application/json">
+                      [
+                        [
+                            {"name": "Harry Potter", "age":"13"},
+                            {"name": "Albus Dumbledore", "age":"279"}
+                        ]
+                      ]
+                        </script>
+        </xtal-json-merge>
+        <p-d on="merged-prop-changed" from="div" to="#firstEditor" prop="input" val="target.mergedProp"></p-d>
+        <p-d on="merged-prop-changed" from="div" to="#insertData" prop="input" val="target.mergedProp"></p-d>
+    </div>
+
+
+    <xtal-json-editor id="firstEditor" options="{}" data-imp></xtal-json-editor>
+    <br>
+    <div>Merge with</div>
+    <pre>
+        [{
+        "columns":[
+            {"id": "index",       "name": "Index",      "field": "index"},
+            {"id": "isActive",    "name": "Active",     "field": "isActive"},
+            {"id": "balance",     "name": "Balance",    "field": "balance"},
+            {"id": "age",         "name": "Age",        "field": "age"},
+            {"id": "eyeColor",    "name": "Eye Color",  "field": "eyeColor"},
+            {"id": "name",        "name": "Name",       "field": "name"},
+            {"id": "gender",      "name": "Gender",     "field": "gender"},
+            {"id": "company",     "name":"Company",     "field": "company"}
+        ],
+        "gridOptions":{
+            "enableCellNavigation": true,
+            "enableColumnReorder": false
+        }
+        }]              
+    </pre>
+    <br>
+    <xtal-json-merge disabled id="insertData" with-path="data" hidden>
+      <script type="application/json">
+          [{
+          "columns":[
+              {"id": "index",       "name": "Index",      "field": "index"},
+              {"id": "isActive",    "name": "Active",     "field": "isActive"},
+              {"id": "balance",     "name": "Balance",    "field": "balance"},
+              {"id": "age",         "name": "Age",        "field": "age"},
+              {"id": "eyeColor",    "name": "Eye Color",  "field": "eyeColor"},
+              {"id": "name",        "name": "Name",       "field": "name"},
+              {"id": "gender",      "name": "Gender",     "field": "gender"},
+              {"id": "company",     "name":"Company",     "field": "company"}
+          ],
+          "gridOptions":{
+              "enableCellNavigation": true,
+              "enableColumnReorder": false
+          }
+          }]
+      </script>
+    </xtal-json-merge>
+    <p-d on="merged-prop-changed" to="xtal-json-editor" prop="input" val="target.mergedProp"></p-d>
+    <br>
+    <div>Output:</div>
+    <xtal-json-editor id="secondEditor" options="{}"></xtal-json-editor>
+    <script type="module" src="https://unpkg.com/xtal-json-merge@0.2.37/xtal-json-merge.js?module"></script>
+    <script type="module" src="https://unpkg.com/xtal-json-editor@0.0.39/xtal-json-editor.js?module"></script>
+    <script type="module" src="https://unpkg.com/p-et-alia@0.0.46/p-et-alia.js?module"></script>
   </div>
 </body>
 
