--- a/demo/cdn.html
+++ b/demo/cdn.html
@@ -7,7 +7,10 @@
 
   <title>xtal-json-merge demo</title>
 
-
+  <link rel="stylesheet"
+  href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 </head>
 
 <body>
@@ -81,6 +84,14 @@
     <script type="module" src="https://unpkg.com/xtal-json-merge@0.2.37/xtal-json-merge.js?module"></script>
     <script type="module" src="https://unpkg.com/xtal-json-editor@0.0.39/xtal-json-editor.js?module"></script>
     <script type="module" src="https://unpkg.com/p-et-alia@0.0.46/p-et-alia.js?module"></script>
+    <!-- <script type="module">
+      import  'https://cdn.pika.dev/p-et-alia/';
+    </script> -->
+    <pre>
+      <code class="html">
+          <div>hello</div>  
+      </code>
+    </pre>
   </div>
 </body>
 
