--- a/demo/dev.html
+++ b/demo/dev.html
@@ -17,7 +17,7 @@
     <!-- <div> -->
     <div>
         <div>Input:</div>
-        <xtal-json-merge input="[]" data-imp>
+        <xtal-json-merge input="[]">
           <script type="application/json">
                       [
                         [
@@ -94,6 +94,7 @@
     </script>
     <script type="module" src="https://unpkg.com/xtal-json-merge@0.2.37/xtal-json-merge.js?module"></script>
     <script type="module" src="https://unpkg.com/xtal-json-editor@0.0.39/xtal-json-editor.js?module"></script>
+    <script type="module" src="temp.js"></script>
   </div>
 </body>
 
