--- a/demo/pd-state-test.html
+++ b/demo/pd-state-test.html
@@ -11,8 +11,8 @@
         <p-h-d to=[-text-content] from-path=val m=1></p-h-d>
         <div -text-content></div>
 
-        <button data-val="hello">Hello</button>
-        <p-w on="click" to=[-text-content] val=target.dataset.val skip-init cc state-path="e.f.g" m=1></p-w>
+        <button aria-role="hello">Hello</button>
+        <p-w on="click" to=[-text-content] val=aria-role skip-init cc state-path="e.f.g" m=1></p-w>
         <div -text-content></div>
         <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
         <script type="importmap-shim">
