--- a/demo/set-attr-test.html
+++ b/demo/set-attr-test.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <button data-test="hello">Click me</button>
-        <p-d on=click to=[-my-attrib] val=target.dataset.test skip-init set-attr></p-d>
+        <p-d on=click to=[-my-attrib] val=target.dataset.test skip-init as-attr></p-d>
         <div -my-attrib>test</div>
     <!-- Use experimental import maps -->
     <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
