--- a/test/index.html
+++ b/test/index.html
@@ -7,10 +7,16 @@
   <title>Document</title>
 </head>
 <body>
-      <input disabled value="There was an old lady who swallowed a fly;" style="width:100%">
-      <p-d on=foo to=[-data-title] val=target.value></p-d>
-      <button -data-title data-why1="I don't know why she swallowed a fly - Perhaps she'll die!"></button>
 
+      <div>There was an old lady who swallowed a fly;</div>
+      <p-d on=foo to=[-lhs] val=target.textContent m=1></p-d>
+      <if-diff if -lhs equals rhs="There was an old lady who swallowed a fly;" data-key-name=why></if-diff>
+      <div data-why=0>
+        <template>
+          <div>I don't know why she swallowed a fly - Perhaps she'll die!</div>
+        </template>
+      </div>
+      
       
       <!-- Use experimental import maps -->
       <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
@@ -25,6 +31,7 @@
       </script>
       <script  type="module-shim">
           import '../p-d.js';
+          import '../../node_modules/if-diff/if-diff.js';
       </script>
 </body>
 </html>
