--- a/test/fly.html
+++ b/test/fly.html
@@ -24,7 +24,7 @@
         <template>
           <button disabled -why>I don't know why she swallowed a fly - Perhaps she'll die!</button>
           <p-d on=click to=[-err] val=why as-attr skip-init></p-d>
-          <div -err nv>She died</div>       
+          <div -err nv ending>She died</div>       
         </template>
       </div>
       
