--- a/test/fly.html
+++ b/test/fly.html
@@ -72,11 +72,18 @@
           
       </div>
       <div>
-        <span>There was an old lady who swallowed a bird; </span>
-        <p-d on=init from=div to=fieldset care-of=legend[-text-content] val=target.textContent m=1></p-d>
+        <span style=display:none;>There was an old lady who swallowed a bird; </span>
+        <p-d on=init from=div to=fieldset care-of=legend[-text-content] val=target.textContent m=1 fire-event=bird-swallow></p-d>
       </div>
       <fieldset>
         <legend -text-content></legend>
+        <p-d on=bird-swallow></p-d>
+        <if-diff if -lhs equals rhs="There was an old lady who swallowed a bird;" data-key-name="birdSwallowed"></if-diff>
+        <div data-birde-swallowed=0>
+          <template>
+            <div endOfSequence></div>
+          </template>
+        </div>
       </fieldset>
       <script type="importmap-shim">
       {
