--- a/test/fly.html
+++ b/test/fly.html
@@ -81,6 +81,7 @@
         <if-diff if -lhs equals rhs="There was an old lady who swallowed a bird;" data-key-name="birdSwallowed"></if-diff>
         <div data-bird-swallowed=0>
           <template>
+            <div>How absurd to swallow a bird!</div>
             <div endOfSequence></div>
           </template>
         </div>
