--- a/test/fly-unt.html
+++ b/test/fly-unt.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Use experimental import maps -->
+    
+    <script type="importmap-shim">
+        {
+          "imports": {
+            "xtal-element/": "../node_modules/xtal-element/",
+            "trans-render/": "../node_modules/trans-render/",
+          }
+        }
+    </script>
     <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
+    <script type="module-shim">
+        
+    </script>
 </body>
 </html>
