--- a/test/fly-unt.html
+++ b/test/fly-unt.html
@@ -7,18 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id=firstLine disabled data-why="I don't know why she swallowed a fly - Perhaps she'll die!">There was an old lady who swallowed a fly;</div>
+    <p-unt on=click dispatch to=why prop=reason val=target.dataset.why bubbles skip-init></p-unt>
+    <div id=target></div>
     <script type="importmap-shim">
         {
           "imports": {
             "xtal-element/": "../node_modules/xtal-element/",
-            "trans-render/": "../node_modules/trans-render/",
+            "trans-render/": "../node_modules/trans-render/"
           }
         }
     </script>
     <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
     <script type="module-shim">
-        
+      import '../p-unt.js';
     </script>
 </body>
+<script>
+  document.body.addEventListener('why', e =>{
+    if(e.detail.reason === "I don't know why she swallowed a fly - Perhaps she'll die!"){
+      target.setAttribute('mark', '');
+    }
+    target.textContent = e.detail.reason;
+  })
+</script>
+<script type=module-shim>
+  import {waitForAttributeChange} from 'trans-render/waitForAttributeChange.js';
+  waitForAttributeChange(firstLine, 'disabled').then(() =>{
+    firstLine.click();
+  })
+</script>
 </html>
