--- a/demo/test.html
+++ b/demo/test.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p-d on=input to=if-diff:lhs m=1></p-d>
-    <a manUp:></a>
-    
+    <fieldset id=fs>
+        <input>
+    </fieldset>
+    <script>
+        fs.addEventListener('input', e =>{
+            debugger;
+        })
+    </script>
 </body>
 </html>
