--- a/test/temp.html
+++ b/test/temp.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-        [container]{
-            resize: horizontal;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
 <body>
-    <div container>
-        <div lhs>Left</div>
-        <div rhs>Right</div>
-    </div>
+      <!-- Use experimental import maps -->
+      <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
+
+      <button id=button2 disabled data-err=false>There was an old lady who swallowed a spider;</button>
+      <p-d on=click to=[-err] val=target.dataset.err as-attr skip-init m=1></p-d>
+      <div -err mark err=true></div>
+      
+      <script type="importmap-shim">
+      {
+        "imports": {
+          "xtal-element/": "../node_modules/xtal-element/",
+          "trans-render/": "../node_modules/trans-render/",
+          "p-d": "../p-d.js"
+        }
+      }
+      </script>
+      <script  type="module-shim">
+          import '../p-d.js';
+          import '../node_modules/if-diff/if-diff.js';
+      </script>
 </body>
 </html>
