--- a/test/fly-d.html
+++ b/test/fly-d.html
@@ -55,7 +55,7 @@
         import {waitForAttributeChange} from 'trans-render/waitForAttributeChange.js';
         waitForAttributeChange(wriggle1, 'disabled').then(() =>{
           wriggle1.myProp ={
-            subProp: 'That wriggled and jiggled and tickeled inside her!'
+            subProp: 'That wriggled and jiggled and tickled inside her!'
           };
           wriggle1.dispatchEvent(new CustomEvent('wriggle-event'));
         })
