--- a/demo/simpleCDN1.html
+++ b/demo/simpleCDN1.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <button data-message=hello>Hello button</button>
-    <p-d on=click to=[-text-content] val=target.dataset.message m=1></p-d>
+    <p-d on=click to=[-text-content] val=target.dataset.message m=1 skip-init></p-d>
     <div -text-content></div>
-    <script type=module src=https://cdn.jsdelivr.net/npm/p-et-alia@0.0.117/dist/p-et-alia.min.js></script>
+    <script type=module src=https://cdn.jsdelivr.net/npm/p-et-alia@0.0.118/dist/p-et-alia.min.js></script>
 </body>
 </html>
